Added scatter graphs

--- a/project1-ec.ipynb
+++ b/project1-ec.ipynb
@@ -4189,7 +4189,9 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Small Business Scatter Plot Comparing Employees vs Number of Establishments Pay\n",
@@ -4233,6 +4235,7 @@
    "cell_type": "code",
    "execution_count": 187,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -4313,7 +4316,9 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "percap_income = [pc_2011, pc_2012, pc_2013, pc_2014, pc_2015]\n",
@@ -4368,12 +4373,121 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-13d41f3e820c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#graph minimum wage vs Establishments\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#Set figure size\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mfig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0msmall_min_wage_plot_2015\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclean_combo_census\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mclean_combo_census\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Year\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"2015\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#graph minimum wage vs Establishments \n",
+    "#Set figure size\n",
+    "fig = plt.figure(figsize=(8,12))\n",
+    "\n",
+    "small_min_wage_plot_2015 = clean_combo_census.loc[clean_combo_census[\"Year\"] == \"2015\"]\n",
+    "small_min_wage_plot_2014 = clean_combo_census.loc[clean_combo_census[\"Year\"] == \"2014\"]\n",
+    "small_min_wage_plot_2013 = clean_combo_census.loc[clean_combo_census[\"Year\"] == \"2013\"]\n",
+    "small_min_wage_plot_2012 = clean_combo_census.loc[clean_combo_census[\"Year\"] == \"2012\"]\n",
+    "small_min_wage_plot_2011 = clean_combo_census.loc[clean_combo_census[\"Year\"] == \"2011\"]\n",
+    "\n",
+    "pop_count_2015 =small_min_wage_plot_2015[\"Population\"]/10000\n",
+    "pop_count_2014 =small_min_wage_plot_2014[\"Population\"]/10000\n",
+    "pop_count_2013 =small_min_wage_plot_2013[\"Population\"]/10000\n",
+    "pop_count_2012 =small_min_wage_plot_2012[\"Population\"]/10000\n",
+    "pop_count_2011 =small_min_wage_plot_2011[\"Population\"]/10000\n",
+    "\n",
+    "#plot with the colors\n",
+    "colors = ['b', 'c', 'y', 'm', 'r']\n",
+    "small_min_wage_plot_2015 = plt.scatter(small_min_wage_plot_2015[\"Minimum Wage\"],small_min_wage_plot_2015[\"Small Business Number of Establishments\"],\n",
+    "                                       c=colors[0],s=pop_count_2015, edgecolors='black',alpha=0.7)\n",
+    "small_min_wage_plot_2014 = plt.scatter(small_min_wage_plot_2014[\"Minimum Wage\"],small_min_wage_plot_2014[\"Small Business Number of Establishments\"],\n",
+    "                                       c=colors[1],s=pop_count_2014,edgecolors='black',alpha=0.6)\n",
+    "small_min_wage_plot_2013 = plt.scatter(small_min_wage_plot_2013[\"Minimum Wage\"],small_min_wage_plot_2013[\"Small Business Number of Establishments\"],\n",
+    "                                       c=colors[2],s=pop_count_2013,edgecolors='black',alpha=0.5)\n",
+    "small_min_wage_plot_2012 = plt.scatter(small_min_wage_plot_2012[\"Minimum Wage\"],small_min_wage_plot_2012[\"Small Business Number of Establishments\"],\n",
+    "                                       c=colors[3],s=pop_count_2012,edgecolors='black',alpha=0.4)\n",
+    "small_min_wage_plot_2011 = plt.scatter(small_min_wage_plot_2011[\"Minimum Wage\"],small_min_wage_plot_2011[\"Small Business Number of Establishments\"],\n",
+    "                                       c=colors[4],s=pop_count_2011,edgecolors='black',alpha=0.3)\n",
+    "\n",
+    "#Add labels to the x and y axes\n",
+    "plt.title(\"Minimum Wage VS.Number of Small Businesses per State for 5 years\")\n",
+    "plt.xlabel(\"Minimum Wage\")\n",
+    "plt.ylabel(\"Establishments\")\n",
+    "plt.legend((small_min_wage_plot_2015,small_min_wage_plot_2014, small_min_wage_plot_2013, small_min_wage_plot_2012,small_min_wage_plot_2011)\n",
+    "           ,(\"2015\", \"2014\", \"2013\",\"2012\",\"2011\"),markerscale=.1)\n",
+    "\n",
+    "plt.xticks(np.arange(7.25,10.75,.25), size = 10)\n",
+    "plt.text(11, 0,'Note: \\n Circle size correlates with Population Size of State.',\n",
+    "     horizontalalignment='left',\n",
+    "     verticalalignment='center')\n",
+    "# Save Figure\n",
+    "plt.savefig(\"Min_wage vs. Small Est.png\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#graph minimum wage vs Establishments \n",
+    "#Set figure size\n",
+    "fig = plt.figure(figsize=(8,12))\n",
+    "\n",
+    "med_min_wage_plot_2015 = clean_combo_census.loc[clean_combo_census[\"Year\"] == \"2015\"]\n",
+    "med_min_wage_plot_2014 = clean_combo_census.loc[clean_combo_census[\"Year\"] == \"2014\"]\n",
+    "med_min_wage_plot_2013 = clean_combo_census.loc[clean_combo_census[\"Year\"] == \"2013\"]\n",
+    "med_min_wage_plot_2012 = clean_combo_census.loc[clean_combo_census[\"Year\"] == \"2012\"]\n",
+    "med_min_wage_plot_2011 = clean_combo_census.loc[clean_combo_census[\"Year\"] == \"2011\"]\n",
+    "\n",
+    "pop_count_2015 =med_min_wage_plot_2015[\"Population\"]/10000\n",
+    "pop_count_2014 =med_min_wage_plot_2014[\"Population\"]/10000\n",
+    "pop_count_2013 =med_min_wage_plot_2013[\"Population\"]/10000\n",
+    "pop_count_2012 =med_min_wage_plot_2012[\"Population\"]/10000\n",
+    "pop_count_2011 =med_min_wage_plot_2011[\"Population\"]/10000\n",
+    "\n",
+    "#plot with the colors\n",
+    "colors = ['b', 'c', 'y', 'm', 'r']\n",
+    "med_min_wage_plot_2015 = plt.scatter(med_min_wage_plot_2015[\"Minimum Wage\"],med_min_wage_plot_2015[\"Medium Business Number of Establishments\"],\n",
+    "                                       c=colors[0],s=pop_count_2015, edgecolors='black',alpha=0.7)\n",
+    "med_min_wage_plot_2014 = plt.scatter(med_min_wage_plot_2014[\"Minimum Wage\"],med_min_wage_plot_2014[\"Medium Business Number of Establishments\"],\n",
+    "                                       c=colors[1],s=pop_count_2014,edgecolors='black',alpha=0.6)\n",
+    "med_min_wage_plot_2013 = plt.scatter(med_min_wage_plot_2013[\"Minimum Wage\"],med_min_wage_plot_2013[\"Medium Business Number of Establishments\"],\n",
+    "                                       c=colors[2],s=pop_count_2013,edgecolors='black',alpha=0.5)\n",
+    "med_min_wage_plot_2012 = plt.scatter(med_min_wage_plot_2012[\"Minimum Wage\"],med_min_wage_plot_2012[\"Medium Business Number of Establishments\"],\n",
+    "                                       c=colors[3],s=pop_count_2012,edgecolors='black',alpha=0.4)\n",
+    "med_min_wage_plot_2011 = plt.scatter(med_min_wage_plot_2011[\"Minimum Wage\"],med_min_wage_plot_2011[\"Medium Business Number of Establishments\"],\n",
+    "                                       c=colors[4],s=pop_count_2011,edgecolors='black',alpha=0.3)\n",
+    "\n",
+    "#Add labels to the x and y axes\n",
+    "plt.title(\"Minimum Wage VS.Number of Medium Businesses per State for 5 years\")\n",
+    "plt.xlabel(\"Minimum Wage\")\n",
+    "plt.ylabel(\"Establishments\")\n",
+    "plt.legend((med_min_wage_plot_2015,med_min_wage_plot_2014, med_min_wage_plot_2013, med_min_wage_plot_2012,med_min_wage_plot_2011)\n",
+    "           ,(\"2015\", \"2014\", \"2013\",\"2012\",\"2011\"),markerscale=.1)\n",
+    "\n",
+    "plt.xticks(np.arange(7.25,10.75,.25), size = 10)\n",
+    "plt.text(11, 0,'Note: \\n Circle size correlates with Population Size of State.',\n",
+    "     horizontalalignment='left',\n",
+    "     verticalalignment='center')\n",
+    "# Save Figure\n",
+    "plt.savefig(\"Min_wage vs. Med Est.png\")\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -4393,7 +4507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
